Remove extra style no longer needed causing contrast issues fixes #1477

--- a/app/assets/stylesheets/modules/spotlight_overrides.scss
+++ b/app/assets/stylesheets/modules/spotlight_overrides.scss
@@ -140,11 +140,6 @@
   }
 }
 
-.dropdown-menu > li > a:hover,
-.dropdown-menu > li > a:focus {
-  background-color: $sidebar-link-background-color;
-}
-
 #sidebar ol.sidenav li a:hover,
 #sidebar ol.sidenav li a:focus {
   background-color: $sidebar-link-background-color;
